Fri Mar 13 16:45:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/openssl_missing.h (i2d_of_void): cast for callbacks.
	  [ruby-core:22860]

	* ext/openssl/ossl_engine.c (ossl_engine_s_by_id): suppress a
	  warning.

	* ext/openssl/ossl_ssl.c (ossl_sslctx_flush_sessions): time_t may
	  be larger than long.

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_get_time),
	  (ossl_ssl_session_get_timeout): use TIMET2NUM() to conver
	  time_t.

Fri Mar 13 15:10:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): should use
	  OPENSSL_free instead of free.  a patch from Charlie Savage a
	  [ruby-core:22858].

Fri Mar 13 10:42:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (AC_HEADER_DIRENT): added.

	* include/ruby/ruby.h (NUM2INT, rb_special_const_p): returns true
	  and false instead of Qtrue and Qfalse for platforms where VALUE
	  is bigger than int.

	* gc.c (gc_stress_set), ext/openssl/ossl_asn1.c (decode_bool): go
	  rid of variables named `bool'.

Fri Mar 13 10:16:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (struct stat.st_size): may be huge.

Fri Mar 13 09:30:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (bigfixize): zero length Bignum is 0.

Fri Mar 13 08:06:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (rv_strdup): macro to duplicate nul-terminated string.
	  [ruby-core:22852]

Thu Mar 12 22:41:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl: suppress warnings.

	* ext/openssl/ossl.h (OSSL_Debug): don't use gcc extention for
	  variadic macro.

Thu Mar 12 22:29:36 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (WARNFLAGS): warning 4996 is only in VC++8 or
	  later.

Thu Mar 12 22:14:01 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_def_const): use INT2NUM because
	  OP_NETSCAPE_DEMO_CIPHER_CHANGE_BUG doesn't fit into Fixnum.
