@@ -1,3 +1,8 @@
+Fri Mar 13 17:04:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/ruby.h (bool): not define to get rid of conflic
+	  against curses.
+
 Fri Mar 13 16:45:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/openssl/openssl_missing.h (i2d_of_void): cast for callbacks.
@@ -21,7 +26,7 @@ Fri Mar 13 15:10:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 Fri Mar 13 10:42:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
-	* configure.in (AC_HEADER_DIRENT): added.
+	* configure.in (AC_HEADER_STDBOOL): added.
 
 	* include/ruby/ruby.h (NUM2INT, rb_special_const_p): returns true
 	  and false instead of Qtrue and Qfalse for platforms where VALUE
